# Alfred-Ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  alfred  demo.py  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
cli/: __init__.py  setup.py
core/: __init__.py  agent.py  alerting.py  api.py  config.py  discord.py  embeddings.py  llm.py  logging.py  memory.py  metrics_store.py  models.py  process.py  scheduler.py  templates.py  tool_discovery.py  tool_meta.py  tool_registry.py  tools.py  workspace.py
models/: __init__.py  base.py  social.py  trade.py
registry/: tools.json
static/: architecture.html  dashboard.html
static/css/: dashboard.css
static/js/: dashboard.js
tests/: __init__.py
tools/: __init__.py  browser.py  calculator.py  code_exec.py  darkstone_api.py  datetime_info.py  fetch_url.py  file_edit.py  file_ops.py  grep_search.py  http_request.py  jupyter_exec.py  system_info.py  web_search.py  x_api.py  x_browser.py  x_browser_setup.py  x_oauth2_setup.py
