[project]
name = "alfred-ai"
version = "0.1.2"
description = "Memory-first AI agent framework with persistent agents, autonomous processes, and a real-time dashboard."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aaron Ackerman"},
]

dependencies = [
    # AI / LLM
    "anthropic>=0.40",
    "sentence-transformers>=3.0",
    "einops>=0.7",
    "lancedb>=0.10",

    # Web framework
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.25",

    # Discord
    "discord.py>=2.3",

    # CLI / TUI
    "rich>=13.0",

    # Data / Config
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

